agregado de api de control de credito
